aligned and fixed error message

--- a/client/src/components/css/quote_form.module.css
+++ b/client/src/components/css/quote_form.module.css
@@ -56,3 +56,6 @@ textarea:focus::placeholder {
   color: #aaa;
   border-color: #ffa500;
 }
+.textDangerLeft {
+    text-align: left;
+}
